--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ lxml
 altair<5
 fpdf
 Markdown==3.6
+bleach>=6.1.0         
+WeasyPrint==61.2       
+cssselect2>=0.7.0
+tinycss2>=1.3.0
+pydyf>=0.8.0
