--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ pandas
 lxml
 altair<5
 Markdown==3.6
-bleach>=6.1.0         
-WeasyPrint==61.2       
+bleach>=6.1.0              
 cssselect2>=0.7.0
 tinycss2>=1.3.0
-pydyf>=0.8.0
+WeasyPrint==61.2
+pydyf==0.8.0
