--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,6 @@
 [mypy]
 python_version = 3.11
+strict = false
 ignore_missing_imports = True
 warn_unused_ignores = True
 warn_redundant_casts = True
